src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CARACTER
    COMENTARIO
    CONVERTIRANUMERO
    CONVERTIRATEXTO
    COR_DER
    COR_IZQ
    ENTERO
    FIN_PROCEDIMIENTO
    FIN_SI_NO
    IGUAL_A
    LLAVE_DER
    LLAVE_IZQ
    REAL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> ALGORITMO cuerpo FIN_ALGORITMO
Rule 2     programa -> funciones ALGORITMO cuerpo FIN_ALGORITMO
Rule 3     cuerpo -> sentencias
Rule 4     sentencias -> sentencia sentencias
Rule 5     sentencias -> sentencia
Rule 6     sentencia -> posible_declaracion_variable
Rule 7     sentencia -> estructura_escribir
Rule 8     sentencia -> leer
Rule 9     sentencia -> asignaciones
Rule 10    sentencia -> para
Rule 11    sentencia -> mientras
Rule 12    sentencia -> segun
Rule 13    sentencia -> multiple_si
Rule 14    sentencia -> llamar_funciones
Rule 15    posible_declaracion_variable -> declaracion_variable
Rule 16    posible_declaracion_variable -> multiple_declaracion_variable
Rule 17    declaracion_variable -> DEFINIR ID COMO TIPO_DATO
Rule 18    multiple_declaracion_variable -> DEFINIR ID COMA ID COMO TIPO_DATO
Rule 19    multiple_declaracion_variable -> DEFINIR ID COMA ID COMA ID COMO TIPO_DATO
Rule 20    multiple_declaracion_variable -> DEFINIR ID COMA ID COMA ID COMA ID COMO TIPO_DATO
Rule 21    multiple_declaracion_variable -> DEFINIR ID COMA ID COMA ID COMA ID COMA ID COMO TIPO_DATO
Rule 22    asignaciones -> asignacion
Rule 23    asignaciones -> asignacion_con_operacion
Rule 24    asignacion -> ID ASIGNAR tipo_dato_identificador
Rule 25    asignacion_con_operacion -> ID ASIGNAR operaciones_matematicas
Rule 26    estructura_escribir -> escribir
Rule 27    estructura_escribir -> escribir_cadena_id
Rule 28    estructura_escribir -> escribir_cadena_id_cadena
Rule 29    estructura_escribir -> escribir_cadena_id_id
Rule 30    escribir -> ESCRIBIR CADENA
Rule 31    escribir -> ESCRIBIR ID
Rule 32    escribir -> ESCRIBIR NUMERO
Rule 33    escribir_cadena_id -> ESCRIBIR CADENA COMA ID
Rule 34    escribir_cadena_id -> ESCRIBIR ID COMA CADENA
Rule 35    escribir_cadena_id -> ESCRIBIR ID COMA ID
Rule 36    escribir_cadena_id -> ESCRIBIR ID COMA NUMERO
Rule 37    escribir_cadena_id -> ESCRIBIR NUMERO COMA ID
Rule 38    escribir_cadena_id_cadena -> ESCRIBIR CADENA COMA ID COMA CADENA
Rule 39    escribir_cadena_id_cadena -> ESCRIBIR ID COMA CADENA COMA ID
Rule 40    escribir_cadena_id_id -> ESCRIBIR CADENA COMA ID COMA CADENA COMA ID
Rule 41    escribir_cadena_id_id -> ESCRIBIR ID COMA CADENA COMA ID COMA CADENA
Rule 42    leer -> LEER ID
Rule 43    para -> PARA ID DESDE NUMERO HASTA NUMERO CON_PASO NUMERO HACER sentencias FIN_PARA
Rule 44    mientras -> MIENTRAS expresion_logica HACER sentencias FIN_MIENTRAS
Rule 45    expresion_logica -> tipo_dato_identificador operador_relacional tipo_dato_identificador
Rule 46    expresion_logica -> expresion_logica operador_logico expresion_logica
Rule 47    tipo_dato_identificador -> ID
Rule 48    tipo_dato_identificador -> NUMERO
Rule 49    tipo_dato_identificador -> CADENA
Rule 50    operador_logico -> Y
Rule 51    operador_logico -> O
Rule 52    operador_logico -> NO
Rule 53    operador_relacional -> ES_MAYOR_QUE
Rule 54    operador_relacional -> ES_MENOR_QUE
Rule 55    operador_relacional -> ES_IGUAL_QUE
Rule 56    operador_relacional -> ES_MAYOR_O_IGUAL_QUE
Rule 57    operador_relacional -> ES_MENOR_O_IGUAL_QUE
Rule 58    operador_relacional -> ES_DISTINTO_QUE
Rule 59    operaciones_matematicas -> operacion_matematica
Rule 60    operaciones_matematicas -> operacion_matematica_parentesis
Rule 61    operaciones_matematicas -> operacion_matematica_parentesis operacion_matematica
Rule 62    operaciones_matematicas -> operacion_matematica operaciones_matematicas
Rule 63    operacion_matematica -> tipo_dato_identificador operador_aritmetico tipo_dato_identificador
Rule 64    operador_aritmetico -> MAS
Rule 65    operador_aritmetico -> MENOS
Rule 66    operador_aritmetico -> POR
Rule 67    operador_aritmetico -> DIVIDIDO
Rule 68    operador_aritmetico -> ELEVADO_A
Rule 69    operador_aritmetico -> RESIDUO
Rule 70    operacion_matematica_parentesis -> PAR_IZQ operacion_matematica PAR_DER
Rule 71    operacion_matematica_parentesis -> PAR_IZQ operacion_matematica PAR_DER operador_aritmetico tipo_dato_identificador
Rule 72    operacion_matematica_parentesis -> PAR_IZQ operacion_matematica_parentesis PAR_DER
Rule 73    segun -> SEGUN ID HACER casos DE_OTRO_MODO sentencias FIN_SEGUN
Rule 74    casos -> caso casos
Rule 75    casos -> caso
Rule 76    caso -> NUMERO DOS_PUN sentencias
Rule 77    caso -> CADENA DOS_PUN sentencias
Rule 78    multiple_si -> si multiple_si
Rule 79    multiple_si -> si_no
Rule 80    si -> SI expresion_logica ENTONCES sentencias FIN_SI
Rule 81    si_no -> SI expresion_logica ENTONCES sentencias SI_NO sentencias FIN_SI
Rule 82    funciones -> funcion funciones
Rule 83    funciones -> funcion
Rule 84    tipo_retorno_funcion -> ID
Rule 85    tipo_retorno_funcion -> LOGICO
Rule 86    tipo_retorno_funcion -> CADENA
Rule 87    funcion -> funcion_sin_retorno
Rule 88    funcion -> funcion_con_retorno
Rule 89    funcion -> funcion_con_parametros_con_retorno
Rule 90    funcion_sin_retorno -> FUNCION ID PUN_Y_COM cuerpo FIN_FUNCION
Rule 91    funcion_con_retorno -> FUNCION ID PUN_Y_COM cuerpo RETORNAR tipo_retorno_funcion FIN_FUNCION
Rule 92    funcion_con_parametros_con_retorno -> FUNCION ID PAR_IZQ parametros PAR_DER PUN_Y_COM cuerpo RETORNAR tipo_retorno_funcion FIN_FUNCION
Rule 93    parametros -> ID COMO TIPO_DATO
Rule 94    parametros -> ID COMO TIPO_DATO COMA parametros
Rule 95    llamar_funciones -> llamar_funcion llamar_funciones
Rule 96    llamar_funciones -> llamar_funcion
Rule 97    llamar_funcion -> ID PAR_IZQ PAR_DER
Rule 98    llamar_funcion -> ID PAR_IZQ tipo_dato_identificador PAR_DER
Rule 99    llamar_funcion -> ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador PAR_DER
Rule 100   llamar_funcion -> ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador PAR_DER
Rule 101   llamar_funcion -> ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador PAR_DER

Terminals, with rules where they appear

ALGORITMO            : 1 2
ASIGNAR              : 24 25
CADENA               : 30 33 34 38 38 39 40 40 41 41 49 77 86
CARACTER             : 
COMA                 : 18 19 19 20 20 20 21 21 21 21 33 34 35 36 37 38 38 39 39 40 40 40 41 41 41 94 99 100 100 101 101 101
COMENTARIO           : 
COMO                 : 17 18 19 20 21 93 94
CONVERTIRANUMERO     : 
CONVERTIRATEXTO      : 
CON_PASO             : 43
COR_DER              : 
COR_IZQ              : 
DEFINIR              : 17 18 19 20 21
DESDE                : 43
DE_OTRO_MODO         : 73
DIVIDIDO             : 67
DOS_PUN              : 76 77
ELEVADO_A            : 68
ENTERO               : 
ENTONCES             : 80 81
ESCRIBIR             : 30 31 32 33 34 35 36 37 38 39 40 41
ES_DISTINTO_QUE      : 58
ES_IGUAL_QUE         : 55
ES_MAYOR_O_IGUAL_QUE : 56
ES_MAYOR_QUE         : 53
ES_MENOR_O_IGUAL_QUE : 57
ES_MENOR_QUE         : 54
FIN_ALGORITMO        : 1 2
FIN_FUNCION          : 90 91 92
FIN_MIENTRAS         : 44
FIN_PARA             : 43
FIN_PROCEDIMIENTO    : 
FIN_SEGUN            : 73
FIN_SI               : 80 81
FIN_SI_NO            : 
FUNCION              : 90 91 92
HACER                : 43 44 73
HASTA                : 43
ID                   : 17 18 18 19 19 19 20 20 20 20 21 21 21 21 21 24 25 31 33 34 35 35 36 37 38 39 39 40 40 41 41 42 43 47 73 84 90 91 92 93 94 97 98 99 100 101
IGUAL_A              : 
LEER                 : 42
LLAVE_DER            : 
LLAVE_IZQ            : 
LOGICO               : 85
MAS                  : 64
MENOS                : 65
MIENTRAS             : 44
NO                   : 52
NUMERO               : 32 36 37 43 43 43 48 76
O                    : 51
PARA                 : 43
PAR_DER              : 70 71 72 92 97 98 99 100 101
PAR_IZQ              : 70 71 72 92 97 98 99 100 101
POR                  : 66
PUN_Y_COM            : 90 91 92
REAL                 : 
RESIDUO              : 69
RETORNAR             : 91 92
SEGUN                : 73
SI                   : 80 81
SI_NO                : 81
TIPO_DATO            : 17 18 19 20 21 93 94
Y                    : 50
error                : 

Nonterminals, with rules where they appear

asignacion           : 22
asignacion_con_operacion : 23
asignaciones         : 9
caso                 : 74 75
casos                : 73 74
cuerpo               : 1 2 90 91 92
declaracion_variable : 15
escribir             : 26
escribir_cadena_id   : 27
escribir_cadena_id_cadena : 28
escribir_cadena_id_id : 29
estructura_escribir  : 7
expresion_logica     : 44 46 46 80 81
funcion              : 82 83
funcion_con_parametros_con_retorno : 89
funcion_con_retorno  : 88
funcion_sin_retorno  : 87
funciones            : 2 82
leer                 : 8
llamar_funcion       : 95 96
llamar_funciones     : 14 95
mientras             : 11
multiple_declaracion_variable : 16
multiple_si          : 13 78
operacion_matematica : 59 61 62 70 71
operacion_matematica_parentesis : 60 61 72
operaciones_matematicas : 25 62
operador_aritmetico  : 63 71
operador_logico      : 46
operador_relacional  : 45
para                 : 10
parametros           : 92 94
posible_declaracion_variable : 6
programa             : 0
segun                : 12
sentencia            : 4 5
sentencias           : 3 4 43 44 73 76 77 80 81 81
si                   : 78
si_no                : 79
tipo_dato_identificador : 24 45 45 63 63 71 98 99 99 100 100 100 101 101 101 101
tipo_retorno_funcion : 91 92

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . ALGORITMO cuerpo FIN_ALGORITMO
    (2) programa -> . funciones ALGORITMO cuerpo FIN_ALGORITMO
    (82) funciones -> . funcion funciones
    (83) funciones -> . funcion
    (87) funcion -> . funcion_sin_retorno
    (88) funcion -> . funcion_con_retorno
    (89) funcion -> . funcion_con_parametros_con_retorno
    (90) funcion_sin_retorno -> . FUNCION ID PUN_Y_COM cuerpo FIN_FUNCION
    (91) funcion_con_retorno -> . FUNCION ID PUN_Y_COM cuerpo RETORNAR tipo_retorno_funcion FIN_FUNCION
    (92) funcion_con_parametros_con_retorno -> . FUNCION ID PAR_IZQ parametros PAR_DER PUN_Y_COM cuerpo RETORNAR tipo_retorno_funcion FIN_FUNCION

    ALGORITMO       shift and go to state 2
    FUNCION         shift and go to state 8

    programa                       shift and go to state 1
    funciones                      shift and go to state 3
    funcion                        shift and go to state 4
    funcion_sin_retorno            shift and go to state 5
    funcion_con_retorno            shift and go to state 6
    funcion_con_parametros_con_retorno shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (1) programa -> ALGORITMO . cuerpo FIN_ALGORITMO
    (3) cuerpo -> . sentencias
    (4) sentencias -> . sentencia sentencias
    (5) sentencias -> . sentencia
    (6) sentencia -> . posible_declaracion_variable
    (7) sentencia -> . estructura_escribir
    (8) sentencia -> . leer
    (9) sentencia -> . asignaciones
    (10) sentencia -> . para
    (11) sentencia -> . mientras
    (12) sentencia -> . segun
    (13) sentencia -> . multiple_si
    (14) sentencia -> . llamar_funciones
    (15) posible_declaracion_variable -> . declaracion_variable
    (16) posible_declaracion_variable -> . multiple_declaracion_variable
    (26) estructura_escribir -> . escribir
    (27) estructura_escribir -> . escribir_cadena_id
    (28) estructura_escribir -> . escribir_cadena_id_cadena
    (29) estructura_escribir -> . escribir_cadena_id_id
    (42) leer -> . LEER ID
    (22) asignaciones -> . asignacion
    (23) asignaciones -> . asignacion_con_operacion
    (43) para -> . PARA ID DESDE NUMERO HASTA NUMERO CON_PASO NUMERO HACER sentencias FIN_PARA
    (44) mientras -> . MIENTRAS expresion_logica HACER sentencias FIN_MIENTRAS
    (73) segun -> . SEGUN ID HACER casos DE_OTRO_MODO sentencias FIN_SEGUN
    (78) multiple_si -> . si multiple_si
    (79) multiple_si -> . si_no
    (95) llamar_funciones -> . llamar_funcion llamar_funciones
    (96) llamar_funciones -> . llamar_funcion
    (17) declaracion_variable -> . DEFINIR ID COMO TIPO_DATO
    (18) multiple_declaracion_variable -> . DEFINIR ID COMA ID COMO TIPO_DATO
    (19) multiple_declaracion_variable -> . DEFINIR ID COMA ID COMA ID COMO TIPO_DATO
    (20) multiple_declaracion_variable -> . DEFINIR ID COMA ID COMA ID COMA ID COMO TIPO_DATO
    (21) multiple_declaracion_variable -> . DEFINIR ID COMA ID COMA ID COMA ID COMA ID COMO TIPO_DATO
    (30) escribir -> . ESCRIBIR CADENA
    (31) escribir -> . ESCRIBIR ID
    (32) escribir -> . ESCRIBIR NUMERO
    (33) escribir_cadena_id -> . ESCRIBIR CADENA COMA ID
    (34) escribir_cadena_id -> . ESCRIBIR ID COMA CADENA
    (35) escribir_cadena_id -> . ESCRIBIR ID COMA ID
    (36) escribir_cadena_id -> . ESCRIBIR ID COMA NUMERO
    (37) escribir_cadena_id -> . ESCRIBIR NUMERO COMA ID
    (38) escribir_cadena_id_cadena -> . ESCRIBIR CADENA COMA ID COMA CADENA
    (39) escribir_cadena_id_cadena -> . ESCRIBIR ID COMA CADENA COMA ID
    (40) escribir_cadena_id_id -> . ESCRIBIR CADENA COMA ID COMA CADENA COMA ID
    (41) escribir_cadena_id_id -> . ESCRIBIR ID COMA CADENA COMA ID COMA CADENA
    (24) asignacion -> . ID ASIGNAR tipo_dato_identificador
    (25) asignacion_con_operacion -> . ID ASIGNAR operaciones_matematicas
    (80) si -> . SI expresion_logica ENTONCES sentencias FIN_SI
    (81) si_no -> . SI expresion_logica ENTONCES sentencias SI_NO sentencias FIN_SI
    (97) llamar_funcion -> . ID PAR_IZQ PAR_DER
    (98) llamar_funcion -> . ID PAR_IZQ tipo_dato_identificador PAR_DER
    (99) llamar_funcion -> . ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador PAR_DER
    (100) llamar_funcion -> . ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador PAR_DER
    (101) llamar_funcion -> . ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador PAR_DER

    LEER            shift and go to state 27
    PARA            shift and go to state 31
    MIENTRAS        shift and go to state 32
    SEGUN           shift and go to state 33
    DEFINIR         shift and go to state 37
    ESCRIBIR        shift and go to state 38
    ID              shift and go to state 28
    SI              shift and go to state 39

    cuerpo                         shift and go to state 9
    sentencias                     shift and go to state 10
    sentencia                      shift and go to state 11
    posible_declaracion_variable   shift and go to state 12
    estructura_escribir            shift and go to state 13
    leer                           shift and go to state 14
    asignaciones                   shift and go to state 15
    para                           shift and go to state 16
    mientras                       shift and go to state 17
    segun                          shift and go to state 18
    multiple_si                    shift and go to state 19
    llamar_funciones               shift and go to state 20
    declaracion_variable           shift and go to state 21
    multiple_declaracion_variable  shift and go to state 22
    escribir                       shift and go to state 23
    escribir_cadena_id             shift and go to state 24
    escribir_cadena_id_cadena      shift and go to state 25
    escribir_cadena_id_id          shift and go to state 26
    asignacion                     shift and go to state 29
    asignacion_con_operacion       shift and go to state 30
    si                             shift and go to state 34
    si_no                          shift and go to state 35
    llamar_funcion                 shift and go to state 36

state 3

    (2) programa -> funciones . ALGORITMO cuerpo FIN_ALGORITMO

    ALGORITMO       shift and go to state 40


state 4

    (82) funciones -> funcion . funciones
    (83) funciones -> funcion .
    (82) funciones -> . funcion funciones
    (83) funciones -> . funcion
    (87) funcion -> . funcion_sin_retorno
    (88) funcion -> . funcion_con_retorno
    (89) funcion -> . funcion_con_parametros_con_retorno
    (90) funcion_sin_retorno -> . FUNCION ID PUN_Y_COM cuerpo FIN_FUNCION
    (91) funcion_con_retorno -> . FUNCION ID PUN_Y_COM cuerpo RETORNAR tipo_retorno_funcion FIN_FUNCION
    (92) funcion_con_parametros_con_retorno -> . FUNCION ID PAR_IZQ parametros PAR_DER PUN_Y_COM cuerpo RETORNAR tipo_retorno_funcion FIN_FUNCION

    ALGORITMO       reduce using rule 83 (funciones -> funcion .)
    FUNCION         shift and go to state 8

    funcion                        shift and go to state 4
    funciones                      shift and go to state 41
    funcion_sin_retorno            shift and go to state 5
    funcion_con_retorno            shift and go to state 6
    funcion_con_parametros_con_retorno shift and go to state 7

state 5

    (87) funcion -> funcion_sin_retorno .

    FUNCION         reduce using rule 87 (funcion -> funcion_sin_retorno .)
    ALGORITMO       reduce using rule 87 (funcion -> funcion_sin_retorno .)


state 6

    (88) funcion -> funcion_con_retorno .

    FUNCION         reduce using rule 88 (funcion -> funcion_con_retorno .)
    ALGORITMO       reduce using rule 88 (funcion -> funcion_con_retorno .)


state 7

    (89) funcion -> funcion_con_parametros_con_retorno .

    FUNCION         reduce using rule 89 (funcion -> funcion_con_parametros_con_retorno .)
    ALGORITMO       reduce using rule 89 (funcion -> funcion_con_parametros_con_retorno .)


state 8

    (90) funcion_sin_retorno -> FUNCION . ID PUN_Y_COM cuerpo FIN_FUNCION
    (91) funcion_con_retorno -> FUNCION . ID PUN_Y_COM cuerpo RETORNAR tipo_retorno_funcion FIN_FUNCION
    (92) funcion_con_parametros_con_retorno -> FUNCION . ID PAR_IZQ parametros PAR_DER PUN_Y_COM cuerpo RETORNAR tipo_retorno_funcion FIN_FUNCION

    ID              shift and go to state 42


state 9

    (1) programa -> ALGORITMO cuerpo . FIN_ALGORITMO

    FIN_ALGORITMO   shift and go to state 43


state 10

    (3) cuerpo -> sentencias .

    FIN_ALGORITMO   reduce using rule 3 (cuerpo -> sentencias .)
    FIN_FUNCION     reduce using rule 3 (cuerpo -> sentencias .)
    RETORNAR        reduce using rule 3 (cuerpo -> sentencias .)


state 11

    (4) sentencias -> sentencia . sentencias
    (5) sentencias -> sentencia .
    (4) sentencias -> . sentencia sentencias
    (5) sentencias -> . sentencia
    (6) sentencia -> . posible_declaracion_variable
    (7) sentencia -> . estructura_escribir
    (8) sentencia -> . leer
    (9) sentencia -> . asignaciones
    (10) sentencia -> . para
    (11) sentencia -> . mientras
    (12) sentencia -> . segun
    (13) sentencia -> . multiple_si
    (14) sentencia -> . llamar_funciones
    (15) posible_declaracion_variable -> . declaracion_variable
    (16) posible_declaracion_variable -> . multiple_declaracion_variable
    (26) estructura_escribir -> . escribir
    (27) estructura_escribir -> . escribir_cadena_id
    (28) estructura_escribir -> . escribir_cadena_id_cadena
    (29) estructura_escribir -> . escribir_cadena_id_id
    (42) leer -> . LEER ID
    (22) asignaciones -> . asignacion
    (23) asignaciones -> . asignacion_con_operacion
    (43) para -> . PARA ID DESDE NUMERO HASTA NUMERO CON_PASO NUMERO HACER sentencias FIN_PARA
    (44) mientras -> . MIENTRAS expresion_logica HACER sentencias FIN_MIENTRAS
    (73) segun -> . SEGUN ID HACER casos DE_OTRO_MODO sentencias FIN_SEGUN
    (78) multiple_si -> . si multiple_si
    (79) multiple_si -> . si_no
    (95) llamar_funciones -> . llamar_funcion llamar_funciones
    (96) llamar_funciones -> . llamar_funcion
    (17) declaracion_variable -> . DEFINIR ID COMO TIPO_DATO
    (18) multiple_declaracion_variable -> . DEFINIR ID COMA ID COMO TIPO_DATO
    (19) multiple_declaracion_variable -> . DEFINIR ID COMA ID COMA ID COMO TIPO_DATO
    (20) multiple_declaracion_variable -> . DEFINIR ID COMA ID COMA ID COMA ID COMO TIPO_DATO
    (21) multiple_declaracion_variable -> . DEFINIR ID COMA ID COMA ID COMA ID COMA ID COMO TIPO_DATO
    (30) escribir -> . ESCRIBIR CADENA
    (31) escribir -> . ESCRIBIR ID
    (32) escribir -> . ESCRIBIR NUMERO
    (33) escribir_cadena_id -> . ESCRIBIR CADENA COMA ID
    (34) escribir_cadena_id -> . ESCRIBIR ID COMA CADENA
    (35) escribir_cadena_id -> . ESCRIBIR ID COMA ID
    (36) escribir_cadena_id -> . ESCRIBIR ID COMA NUMERO
    (37) escribir_cadena_id -> . ESCRIBIR NUMERO COMA ID
    (38) escribir_cadena_id_cadena -> . ESCRIBIR CADENA COMA ID COMA CADENA
    (39) escribir_cadena_id_cadena -> . ESCRIBIR ID COMA CADENA COMA ID
    (40) escribir_cadena_id_id -> . ESCRIBIR CADENA COMA ID COMA CADENA COMA ID
    (41) escribir_cadena_id_id -> . ESCRIBIR ID COMA CADENA COMA ID COMA CADENA
    (24) asignacion -> . ID ASIGNAR tipo_dato_identificador
    (25) asignacion_con_operacion -> . ID ASIGNAR operaciones_matematicas
    (80) si -> . SI expresion_logica ENTONCES sentencias FIN_SI
    (81) si_no -> . SI expresion_logica ENTONCES sentencias SI_NO sentencias FIN_SI
    (97) llamar_funcion -> . ID PAR_IZQ PAR_DER
    (98) llamar_funcion -> . ID PAR_IZQ tipo_dato_identificador PAR_DER
    (99) llamar_funcion -> . ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador PAR_DER
    (100) llamar_funcion -> . ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador PAR_DER
    (101) llamar_funcion -> . ID PAR_IZQ tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador COMA tipo_dato_identificador PAR_DER

    FIN_ALGORITMO   reduce using rule 5 (sentencias -> sentencia .)
    FIN_FUNCION     reduce using rule 5 (sentencias -> sentencia .)
    RETORNAR        reduce using rule 5 (sentencias -> sentencia .)
    FIN_MIENTRAS    reduce using rule 5 (sentencias -> sentencia .)
    FIN_SI          reduce using rule 5 (sentencias -> sentencia .)
    SI_NO           reduce using rule 5 (sentencias -> sentencia .)
    FIN_SEGUN       reduce using rule 5 (sentencias -> sentencia .)
    NUMERO          reduce using rule 5 (sentencias -> sentencia .)
    CADENA          reduce using rule 5 (sentencias -> sentencia .)
    DE_OTRO_MODO    reduce using rule 5 (sentencias -> sentencia .)
    FIN_PARA        reduce using rule 5 (sentencias -> sentencia .)
    LEER            shift and go to state 27
    PARA            shift and go to state 31
    MIENTRAS        shift and go to state 32
    SEGUN           shift and go to state 33
    DEFINIR         shift and go to state 37
    ESCRIBIR        shift and go to state 38
    ID              shift and go to state 28
    SI              shift and go to state 39

    sentencia                      shift and go to state 11
    sentencias                     shift and go to state 44
    posible_declaracion_variable   shift and go to state 12
    estructura_escribir            shift and go to state 13
    leer                           shift and go to state 14
    asignaciones                   shift and go to state 15
    para                           shift and go to state 16
    mientras                       shift and go to state 17
    segun                          shift and go to state 18
    multiple_si                    shift and go to state 19
    llamar_funciones               shift and go to state 20
    declaracion_variable           shift and go to state 21
    multiple_declaracion_variable  shift and go to state 22
    escribir                       shift and go to state 23
    escribir_cadena_id             shift and go to state 24
    escribir_cadena_id_cadena      shift and go to state 25
    escribir_cadena_id_id          shift and go to state 26
    asignacion                     shift and go to state 29
    asignacion_con_operacion       shift and go to state 30
    si                             shift and go to state 34
    si_no                          shift and go to state 35
    llamar_funcion                 shift and go to state 36

state 12

    (6) sentencia -> posible_declaracion_variable .

    LEER            reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    PARA            reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    MIENTRAS        reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    SEGUN           reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    DEFINIR         reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    ESCRIBIR        reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    ID              reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    SI              reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    FIN_ALGORITMO   reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    FIN_FUNCION     reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    RETORNAR        reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    FIN_MIENTRAS    reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    FIN_SI          reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    SI_NO           reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    FIN_SEGUN       reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    NUMERO          reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    CADENA          reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    DE_OTRO_MODO    reduce using rule 6 (sentencia -> posible_declaracion_variable .)
    FIN_PARA        reduce using rule 6 (sentencia -> posible_declaracion_variable .)


state 13

    (7) sentencia -> estructura_escribir .

    LEER            reduce using rule 7 (sentencia -> estructura_escribir .)
    PARA            reduce using rule 7 (sentencia -> estructura_escribir .)
    MIENTRAS        reduce using rule 7 (sentencia -> estructura_escribir .)
    SEGUN           reduce using rule 7 (sentencia -> estructura_escribir .)
    DEFINIR         reduce using rule 7 (sentencia -> estructura_escribir .)
    ESCRIBIR        reduce using rule 7 (sentencia -> estructura_escribir .)
    ID              reduce using rule 7 (sentencia -> estructura_escribir .)
    SI              reduce using rule 7 (sentencia -> estructura_escribir .)
    FIN_ALGORITMO   reduce using rule 7 (sentencia -> estructura_escribir .)
    FIN_FUNCION     reduce using rule 7 (sentencia -> estructura_escribir .)
    RETORNAR        reduce using rule 7 (sentencia -> estructura_escribir .)
    FIN_MIENTRAS    reduce using rule 7 (sentencia -> estructura_escribir .)
    FIN_SI          reduce using rule 7 (sentencia -> estructura_escribir .)
    SI_NO           reduce using rule 7 (sentencia -> estructura_escribir .)
    FIN_SEGUN       reduce using rule 7 (sentencia -> estructura_escribir .)
    NUMERO          reduce using rule 7 (sentencia -> estructura_escribir .)
    CADENA          reduce using rule 7 (sentencia -> estructura_escribir .)
    DE_OTRO_MODO    reduce using rule 7 (sentencia -> estructura_escribir .)
    FIN_PARA        reduce using rule 7 (sentencia -> estructura_escribir .)


state 14

    (8) sentencia -> leer .

    LEER            reduce using rule 8 (sentencia -> leer .)
    PARA            reduce using rule 8 (sentencia -> leer .)
    MIENTRAS        reduce using rule 8 (sentencia -> leer .)
    SEGUN           reduce using rule 8 (sentencia -> leer .)
    DEFINIR         reduce using rule 8 (sentencia -> leer .)
    ESCRIBIR        reduce using rule 8 (sentencia -> leer .)
    ID              reduce using rule 8 (sentencia -> leer .)
    SI              reduce using rule 8 (sentencia -> leer .)
    FIN_ALGORITMO   reduce using rule 8 (sentencia -> leer .)
    FIN_FUNCION     reduce using rule 8 (sentencia -> leer .)
    RETORNAR        reduce using rule 8 (sentencia -> leer .)
    FIN_MIENTRAS    reduce using rule 8 (sentencia -> leer .)
    FIN_SI          reduce using rule 8 (sentencia -> leer .)
    SI_NO           reduce using rule 8 (sentencia -> leer .)
    FIN_SEGUN       reduce using rule 8 (sentencia -> leer .)
    NUMERO          reduce using rule 8 (sentencia -> leer .)
    CADENA          reduce using rule 8 (sentencia -> leer .)
    DE_OTRO_MODO    reduce using rule 8 (sentencia -> leer .)
    FIN_PARA        reduce using rule 8 (sentencia -> leer .)


state 15

    (9) sentencia -> asignaciones .

    LEER            reduce using rule 9 (sentencia -> asignaciones .)
    PARA            reduce using rule 9 (sentencia -> asignaciones .)
    MIENTRAS        reduce using rule 9 (sentencia -> asignaciones .)
    SEGUN           reduce using rule 9 (sentencia -> asignaciones .)
    DEFINIR         reduce using rule 9 (sentencia -> asignaciones .)
    ESCRIBIR        reduce using rule 9 (sentencia -> asignaciones .)
    ID              reduce using rule 9 (sentencia -> asignaciones .)
    SI              reduce using rule 9 (sentencia -> asignaciones .)
    FIN_ALGORITMO   reduce using rule 9 (sentencia -> asignaciones .)
    FIN_FUNCION     reduce using rule 9 (sentencia -> asignaciones .)
    RETORNAR        reduce using rule 9 (sentencia -> asignaciones .)
    FIN_MIENTRAS    reduce using rule 9 (sentencia -> asignaciones .)
    FIN_SI          reduce using rule 9 (sentencia -> asignaciones .)
    SI_NO           reduce using rule 9 (sentencia -> asignaciones .)
    FIN_SEGUN       reduce using rule 9 (sentencia -> asignaciones .)
    NUMERO          reduce using rule 9 (sentencia -> asignaciones .)
    CADENA          reduce using rule 9 (sentencia -> asignaciones .)
    DE_OTRO_MODO    reduce using rule 9 (sentencia -> asignaciones .)
    FIN_PARA        reduce using rule 9 (sentencia -> asignaciones .)


state 16

    (10) sentencia -> para .

    LEER            reduce using rule 10 (sentencia -> para .)
    PARA            reduce using rule 10 (sentencia -> para .)
    MIENTRAS        reduce using rule 10 (sentencia -> para .)
    SEGUN           reduce using rule 10 (sentencia -> para .)
    DEFINIR         reduce using rule 10 (sentencia -> para .)
    ESCRIBIR        reduce using rule 10 (sentencia -> para .)
    ID              reduce using rule 10 (sentencia -> para .)
    SI              reduce using rule 10 (sentencia -> para .)
    FIN_ALGORITMO   reduce using rule 10 (sentencia -> para .)
    FIN_FUNCION     reduce using rule 10 (sentencia -> para .)
    RETORNAR        reduce using rule 10 (sentencia -> para .)
    FIN_MIENTRAS    reduce using rule 10 (sentencia -> para .)
    FIN_SI          reduce using rule 10 (sentencia -> para .)
    SI_NO           reduce using rule 10 (sentencia -> para .)
    FIN_SEGUN       reduce using rule 10 (sentencia -> para .)
    NUMERO          reduce using rule 10 (sentencia -> para .)
    CADENA          reduce using rule 10 (sentencia -> para .)
    DE_OTRO_MODO    reduce using rule 10 (sentencia -> para .)
    FIN_PARA        reduce using rule 10 (sentencia -> para .)


state 17

    (11) sentencia -> mientras .

    LEER            reduce using rule 11 (sentencia -> mientras .)
    PARA            reduce using rule 11 (sentencia -> mientras .)
    MIENTRAS        reduce using rule 11 (sentencia -> mientras .)
    SEGUN           reduce using rule 11 (sentencia -> mientras .)
